// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Nav Button correctly renders when disabled prop is true 1`] = `
<div
  className="viewer--components--inline-nav-button is-goNext is-not-enabled"
  onClick={[Function]}
>
  testTitle
</div>
`;

exports[`Inline Nav Button correctly renders when type prop is goNext 1`] = `
<div
  className="viewer--components--inline-nav-button is-goNext is-enabled"
  onClick={[Function]}
>
  testTitle
</div>
`;

exports[`Inline Nav Button correctly renders when type prop is goPrev 1`] = `
<div
  className="viewer--components--inline-nav-button is-goPrev is-enabled"
  onClick={[Function]}
>
  testTitle
</div>
`;
